# ocaml-rs

./: .clippy.toml  .gitignore  01_introduction.html  02_type_conversion.html  03_writing_ocaml_functions_in_rust.html  04_linking_an_ocaml_library_into_a_rust_program.html  404.html  CHANGES.md  Cargo.toml  Makefile  README.md  TODO.md  build.rs  index.html  print.html  searchindex.js  searchindex.json  toc.html  toc.js  version.ml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: bytecode.yml  clippy.yml  native.yml  ocaml.yml  rust-4.06.yaml  rust-4.07.yaml  rust-4.08.yaml  rust-4.09.yaml  rust-4.10.yaml  rust.yml  test.yml
derive/: Cargo.toml  README.md
derive/src/: derive.rs  lib.rs
doc/: book.toml
doc/src/: 01_introduction.md  02_automatic_type_conversion.md  02_type_conversion.md  03_writing_ocaml_functions_in_rust.md  04_linking_an_ocaml_library_into_a_rust_program.md  SUMMARY.md
example/: Cargo.toml  dune-project  example.opam
example/.cargo/: config
example/src/: dune  enums.rs  example.ml  lib.rs
examples/: rust.rs
examples/ocaml/: Makefile  jbuild  test.ml  test.opam
examples/ocaml/src/: test.ml
examples/rust/: Cargo.toml
examples/rust/src/: lib.rs
src/: alloc.rs  callback.rs  conv.rs  custom.rs  error.rs  lib.rs  macros.rs  memory.rs  mlvalues.rs  named.rs  pointer.rs  root.rs  runtime.rs  tag.rs  types.rs  value.rs
src/core/: alloc.rs  bigarray.rs  callback.rs  custom.rs  error.rs  fail.rs  lib.rs  memory.rs  mlvalues.rs  mod.rs  state.rs
src/tests/: mod.rs
sys/: Cargo.toml  build.rs
sys/src/: alloc.rs  bigarray.rs  callback.rs  custom.rs  fail.rs  lib.rs  memory.rs  mlvalues.rs  ocaml-sys.c  printexc.rs  runtime.rs  state.rs  tag.rs
test/: Cargo.toml  build.rs  dune-project  ocamlrs-test.opam
test/src/: bench.ml  callback.rs  callbacks.ml  callbacks.rs  conv.ml  conv.rs  custom.ml  custom.rs  dune  enums.ml  lib.rs  runtime.ml  runtime.rs  rust.ml  rust.mli  types.ml  types.rs  util.ml
tests/: test.rs
