[package]
name = "ocaml"
version = "1.0.0-beta.5"
authors = ["Zach Shipko <zachshipko@gmail.com>"]
readme = "README.md"
keywords = ["ocaml", "rust", "ffi"]
repository = "https://github.com/zshipko/ocaml-rs"
license = "ISC"
description = "OCaml bindings for Rust"
documentation = "https://docs.rs/ocaml"
edition = "2021"

[package.metadata.docs.rs]
features = [ "without-ocamlopt", "derive", "link" ]

[dependencies]
ocaml-interop = {git = "https://github.com/tizoc/ocaml-interop", branch="boxroot030"}
ocaml-sys = {path = "./sys", version = ">=0.23"}
ocaml-boxroot-sys = {version = "0.3.0"}
ocaml-derive = {path = "./derive", optional = true, version = "^1.0.0-beta.5"}
cstr_core = {version = "0.2", optional = true}
ndarray = {version = "^0.15.1", optional = true}

[features]
default = ["derive"]
derive = ["ocaml-derive"]
link = ["ocaml-sys/link"]
without-ocamlopt = [
  "ocaml-sys/without-ocamlopt",
  "ocaml-interop/without-ocamlopt",
]
no-std = ["cstr_core/alloc", "no-panic-hook"]
bigarray-ext = ["ndarray"]
no-caml-startup = ["ocaml-interop/no-caml-startup"]
no-panic-hook = []
ocaml5 = ["ocaml-sys/ocaml5"]

[workspace]
members = [
  "derive",
  "sys",
  "test",
  "build"
]
