[package]
name = "ocaml"
version = "1.0.1"
authors = ["Zach Shipko <zachshipko@gmail.com>"]
readme = "README.md"
keywords = ["ocaml", "rust", "ffi"]
repository = "https://github.com/zshipko/ocaml-rs"
license = "ISC"
description = "OCaml bindings for Rust"
documentation = "https://docs.rs/ocaml"
edition = "2021"

[package.metadata.docs.rs]
no-default-features = true
features = [ "derive", "without-ocamlopt", "ocaml5", "docs-rs" ]

[dependencies]
ocaml-sys = {path = "./sys", version = ">=0.24"}
ocaml-boxroot-sys = {version = "0.3.1", optional = true}
ocaml-derive = {path = "./derive", optional = true, version = "^1.0.0"}
cstr_core = {version = "0.2", optional = true}
ndarray = {version = "^0.16.1", optional = true}

[features]
default = ["derive", "ocaml-boxroot-sys"]
derive = ["ocaml-derive"]
link = ["ocaml-sys/link"]
without-ocamlopt = [
  "ocaml-sys/without-ocamlopt",
]
no-std = ["cstr_core/alloc", "no-panic-hook"]
bigarray-ext = ["ndarray"]
no-caml-startup = []
no-panic-hook = []
ocaml5 = ["ocaml-sys/ocaml5"]
docs-rs = []

[workspace]
members = [
  "derive",
  "sys",
  "test",
  "build"
]

[dev-dependencies]
serial_test = "3.0.0"

[[example]]
name = "rust"
required-features = ["link"]
