[package]
name = "ocaml"
version = "1.3.0"
authors = ["Zach Shipko <zachshipko@gmail.com>"]
readme = "README.md"
keywords = ["ocaml", "rust", "ffi"]
repository = "https://github.com/zshipko/ocaml-rs"
license = "ISC"
description = "OCaml bindings for Rust"
documentation = "https://docs.rs/ocaml"
edition = "2021"

[package.metadata.docs.rs]
no-default-features = true
features = [ "derive", "without-ocamlopt", "ocaml5" ]

[dependencies]
ocaml-sys = {path = "./sys", version = ">=0.26"}
ocaml-boxroot-sys = {version = "0.4.0", default-features = false}
ocaml-derive = {path = "./derive", optional = true, version = "^1.0.0"}
cstr_core = {version = "0.2", optional = true}
ndarray = {version = "^0.16.1", optional = true}

[features]
default = ["derive", "boxroot"]
# This is required for ocaml-rs to work correctly, it is only optional so docs.rs can build
boxroot = ["ocaml-boxroot-sys/bundle-boxroot"]
derive = ["ocaml-derive"]
link = ["ocaml-sys/link", "boxroot"]
without-ocamlopt = [
  "ocaml-sys/without-ocamlopt",
]
no-std = ["cstr_core/alloc", "boxroot", "no-panic-hook"]
bigarray-ext = ["ndarray"]
no-caml-startup = []
no-panic-hook = []
ocaml5 = ["ocaml-sys/ocaml5"]

[workspace]
members = [
  "derive",
  "sys",
  "test",
  "build"
]

[dev-dependencies]
serial_test = "3.0.0"

[[example]]
name = "rust"
required-features = ["link"]
