[package]
name = "ocaml-sys"
version = "0.20.1"
authors = ["Zach Shipko <zachshipko@gmail.com>"]
keywords = ["ocaml", "rust", "ffi"]
repository = "https://github.com/zshipko/ocaml-rs"
license = "ISC"
description = "Low-level OCaml bindings for Rust"
documentation = "https://docs.rs/ocaml-sys"
edition = "2018"

[dependencies]
chlorine = "1.0"

[package.metadata.docs.rs]
features = [ "without-ocamlopt", "caml-state" ]

[features]
default = []
link = []
without-ocamlopt = []
caml-state = []
