[package]
name = "ocaml-sys"
version = "0.23.0"
authors = ["Zach Shipko <zachshipko@gmail.com>"]
keywords = ["ocaml", "rust", "ffi"]
repository = "https://github.com/zshipko/ocaml-rs"
license = "ISC"
description = "Low-level OCaml bindings for Rust"
documentation = "https://docs.rs/ocaml-sys"
edition = "2021"

[dependencies]
cty = "0.2"

[package.metadata.docs.rs]
features = [ "without-ocamlopt", "caml-state" ]

[build-dependencies]
cc = "1"

[features]
default = []
link = []
without-ocamlopt = []
caml-state = []
