opam-version: "2.0"
maintainer:   "zachshipko@gmail.com"
authors:      ["Zach Shipko"]
license:      "ISC"
homepage:     "https://github.com/zshipko/ocaml-rs"
bug-reports:  "https://github.com/zshipko/ocaml-rs/issues"
dev-repo:     "git+https://github.com/zshipko/ocaml-rs.git"

build: [
 ["dune" "build" "-p" name "-j" jobs]
 ["dune" "exec" "bin/main.exe"] {with-test}
]

depends: [
  "ocaml"   {>= "4.03.0"}
  "dune" {>= "2.0.0"}
  "ppx_inline_test" {with-test}
  "conf-rust-2018"
]
synopsis: """
Example program using ocaml-rs
"""

