(include_subdirs unqualified)

(rule
    (deps (source_tree .))
    (targets libexample_stubs.a dllexample_stubs.so)
    (action
        (progn
            (run cargo build --target-dir ../rust --release)
            (run sh -c "mv ../rust/release/libexample_stubs.so ./dllexample_stubs.so || mv ../rust/release/libexample_stubs.dylib ./dllexample_stubs.so")
            (run mv ../rust/release/libexample_stubs.a libexample_stubs.a)
        )
    )
)

(library
   (name example)
   (public_name example)
   (self_build_stubs_archive (example))
   (c_library_flags (-lpthread -lc -lm))
)
