(include_subdirs unqualified)

(rule
 (deps
  (source_tree .))
 ; Library names go here
 (targets libocamlrs_test_stubs.a dllocamlrs_test_stubs.so)
 (action
  (progn
   ; Build the Rust code
   (run cargo build --target-dir ../rust --release)
   ; This is needed to support Linux and macOS shared libraries
   (run sh -c
     "mv ../rust/release/libocamlrs_test_stubs.so ./dllocamlrs_test_stubs.so || mv ../rust/release/libocamlrs_test_stubs.dylib ./dllocamlrs_test_stubs.so")
   ; Copy over the static library too
   (run mv ../rust/release/libocamlrs_test_stubs.a libocamlrs_test_stubs.a))))

(library
 (name ocamlrs_test)
 (public_name ocamlrs-test)
 (modules enums types callback)
 (inline_tests)
 (preprocess (pps ppx_inline_test))

 ; Link the Rust library
 (foreign_archives ocamlrs_test_stubs)
 (c_library_flags
  (-lpthread -lc -lm)))
